Update Master CSS documentation and add development CSS import

--- a/website/app/[locale]/(root)/docs/introduction/content.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/content.mdx
@@ -434,24 +434,12 @@ Reducing [critical CSS](https://web.dev/articles/codelab-extract-and-inline-crit
 
 ---
 
-## 🚧 Essential knowledge
+## Get ready for the journey
+You can embark on an in-depth study of Master CSS without prior CSS expertise. Each document features demonstrations and fundamental usages of the intended functionalities.
 
----
+The Master CSS helps you lower the threshold for learning CSS.
 
-## Join our community
-If you have questions about Master CSS, you're always welcome to ask our community on:
-
-- [GitHub Discussions](https://github.com/master-co/css/discussions): Ask questions and share insights.
-- [Discord](https://discord.com/invite/sZNKpAAAw6): Join real-time conversations with humans.
-- [Twitter](https://twitter.com/mastercorg): Stay updated on Master CSS
-
-We're here to support your Master CSS journey!
-
-<StarUs />
-
----
-
-## Start your Master CSS journey
+### How to use documentation
 A few notes on using these documents:
 
 1. Get an overview of almost all the documents via the navigation on the left side of the screen, and there are only a few categories:
@@ -464,15 +452,28 @@ A few notes on using these documents:
     - **Syntax** for all syntax references.
 
 2. On the right side, you'll see a table of contents that makes navigating between page sections easier.
-3. Click the search box on the left side or use the shortcut <KeyCap>Ctrl</KeyCap> + <KeyCap>K</KeyCap> or <KeyCap>Command</KeyCap> + <KeyCap>K</KeyCap> to search the entire site.
+3. Click the search box on the left side or use the shortcut <KeyCap>Ctrl</KeyCap> + <KeyCap>K</KeyCap> or <KeyCap>⌘ Command</KeyCap> + <KeyCap>K</KeyCap> to search the entire site.
 4. Every class name in the document can preview the generated CSS rules by hovering.
     ```html
     <div class="**hidden@<sm&>md**">Try hovering over the class</div>
     ```
 
-Also, you can use the official [Master CSS Play](/play) to edit, preview, view the generated size, and even share your design online.
+### Try Master CSS online
+
+You can use the official [Master CSS Play](/play) to edit, preview, view the generated size, and even share your design online.
 
 <figure>
     <Image src={require('~/public/images/play.png').default} placeholder="blur" alt="Master CSS Play" className="b:1|frame r:2x" />
     <figcaption>A real-time code editor for Master CSS</figcaption>
 </figure>
+
+### Join our community
+If you have questions about Master CSS, you're always welcome to ask our community on:
+
+- [GitHub Discussions](https://github.com/master-co/css/discussions): Ask questions and share insights.
+- [Discord](https://discord.com/invite/sZNKpAAAw6): Join real-time conversations with humans.
+- [Twitter](https://twitter.com/mastercorg): Stay updated on Master CSS
+
+We're here to support your Master CSS journey!
+
+<StarUs />
