Update CSS documentation and font style in Play component

--- a/website/app/[locale]/(root)/docs/introduction/content.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/content.mdx
@@ -439,7 +439,7 @@ You can embark on an in-depth study of Master CSS without prior CSS expertise. E
 
 The Master CSS helps you lower the threshold for learning CSS.
 
-### How to use documentation
+### Use documentation
 A few notes on using these documents:
 
 1. Get an overview of almost all the documents via the navigation on the left side of the screen, and there are only a few categories:
