Update CSS class names for background stripes

--- a/website/app/[locale]/(root)/docs/columns/content.mdx
+++ b/website/app/[locale]/(root)/docs/columns/content.mdx
@@ -6,31 +6,31 @@
 Use `mcss cols:value` to set the number of columns when creating a multi-column layout. The column width will automatically adjust to the column count.
 <Demo className="py:0!">
     <div className="gap:8x cols:3@sm cols:1 w:full break-inside:avoid_:where(div)">
-        <div className="bg-stripe-pink pt:32">
+        <div className="bg:stripe-pink pt:32">
             <Image src="/images/mountain4.jpg" width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:16">
+        <div className="bg:stripe-pink pt:16">
             <Image src="/images/mountain7.jpg" width={200} height={200} alt="mountain" className="aspect:1/1 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:16 pb:32">
+        <div className="bg:stripe-pink pt:16 pb:32">
             <Image src="/images/mountain19.jpg" width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:32">
+        <div className="bg:stripe-pink pt:32">
             <Image src="/images/mountain14.jpg" width={200} height={200} alt="mountain" className="aspect:1/1 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:16">
+        <div className="bg:stripe-pink pt:16">
             <Image src="/images/mountain15.jpg" width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:16 pb:32">
+        <div className="bg:stripe-pink pt:16 pb:32">
             <Image src="/images/mountain16.jpg" width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:32">
+        <div className="bg:stripe-pink pt:32">
             <Image src="/images/mountain17.jpg" width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:16">
+        <div className="bg:stripe-pink pt:16">
             <Image src="/images/mountain18.jpg" width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:16 pb:32">
+        <div className="bg:stripe-pink pt:16 pb:32">
             <Image src="/images/mountain20.jpg" width={200} height={200} alt="mountain" className="aspect:1/1 r:1x object:cover" />
         </div>
     </div>
@@ -47,28 +47,28 @@ Use `mcss cols:value` to set the number of columns when creating a multi-column 
 Use `mcss cols:count|width` to set the minimum width of each column to `width` and the maximum number of columns to `count` columns when creating a flexible multi-column layout.
 <Demo className="py:0!">
     <div className="gap:8x cols:4|100px@sm cols:1 w:full break-inside:avoid_:where(div)">
-        <div className="bg-stripe-pink pt:32">
+        <div className="bg:stripe-pink pt:32">
             <Image src="/images/mountain20.jpg" width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:16 pb:32">
+        <div className="bg:stripe-pink pt:16 pb:32">
             <Image src="/images/mountain14.jpg" width={200} height={200} alt="mountain" className="aspect:1/1 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:32">
+        <div className="bg:stripe-pink pt:32">
             <Image src="/images/mountain15.jpg" width={200} height={200} alt="mountain" className="aspect:1/1 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:16 pb:32">
+        <div className="bg:stripe-pink pt:16 pb:32">
             <Image src="/images/mountain16.jpg" width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:32">
+        <div className="bg:stripe-pink pt:32">
             <Image src="/images/mountain18.jpg" width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:16 pb:32">
+        <div className="bg:stripe-pink pt:16 pb:32">
             <Image src="/images/mountain17.jpg" width={200} height={200} alt="mountain" className="aspect:1/1 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:32">
+        <div className="bg:stripe-pink pt:32">
             <Image src="/images/mountain19.jpg" width={200} height={200} alt="mountain" className="aspect:1/1 r:1x object:cover" />
         </div>
-        <div className="bg-stripe-pink pt:16 pb:32">
+        <div className="bg:stripe-pink pt:16 pb:32">
             <Image src="/images/mountain7.jpg"width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
     </div>
