--- a/website/app/[locale]/(root)/docs/inset/content.mdx
+++ b/website/app/[locale]/(root)/docs/inset/content.mdx
@@ -5,7 +5,7 @@
 ### Inset
 Use `inset:offset` to set the distance between the element and its parent element.
 <Demo>
-    <div className="bg-stripe-pink">
+    <div className="bg:stripe-pink">
         <div className="box w:180 aspect-ratio:1/1 inset:20 rel">`inset:20`</div>
     </div>
 </Demo>
