--- a/website/app/[locale]/(root)/docs/text-transform/content.mdx
+++ b/website/app/[locale]/(root)/docs/text-transform/content.mdx
@@ -5,19 +5,19 @@
     <DemoPanel className="flex flex:col gap:8x">
         <div className="w:full">
             <DemoLabel>capitalize</DemoLabel>
-            <DemoP><b className="bg-stripe-pink">H</b>eavy <b className="bg-stripe-pink">B</b>oxes <b className="bg-stripe-pink">P</b>erform <b className="bg-stripe-pink">Q</b>uick <b className="bg-stripe-pink">W</b>altzes <b className="bg-stripe-pink">A</b>nd <b className="bg-stripe-pink">J</b>igs.</DemoP>
+            <DemoP><b className="bg:stripe-pink">H</b>eavy <b className="bg:stripe-pink">B</b>oxes <b className="bg:stripe-pink">P</b>erform <b className="bg:stripe-pink">Q</b>uick <b className="bg:stripe-pink">W</b>altzes <b className="bg:stripe-pink">A</b>nd <b className="bg:stripe-pink">J</b>igs.</DemoP>
         </div>
         <div className="w:full">
             <DemoLabel>lowercase</DemoLabel>
-            <DemoP><b className="bg-stripe-pink">heavy boxes perform quick waltzes and jigs.</b></DemoP>
+            <DemoP><b className="bg:stripe-pink">heavy boxes perform quick waltzes and jigs.</b></DemoP>
         </div>
         <div className="w:full">
             <DemoLabel>uppercase</DemoLabel>
-            <DemoP><b className="bg-stripe-pink">HEAVY BOXES PERFORM QUICK WALTZES AND JIGS.</b></DemoP>
+            <DemoP><b className="bg:stripe-pink">HEAVY BOXES PERFORM QUICK WALTZES AND JIGS.</b></DemoP>
         </div>
         <div className="w:full">
             <DemoLabel>uppercase::first-letter</DemoLabel>
-            <DemoP><b className="bg-stripe-pink">H</b>eavy boxes perform quick waltzes and jigs.</DemoP>
+            <DemoP><b className="bg:stripe-pink">H</b>eavy boxes perform quick waltzes and jigs.</DemoP>
         </div>
         <div className="w:full">
             <DemoLabel>text-transform:none</DemoLabel>
@@ -33,7 +33,7 @@
 Convert the first letter of each word to uppercase.
 <Demo $py={0}>
     <DemoPanel>
-        <DemoP><b className="bg-stripe-pink">H</b>eavy <b className="bg-stripe-pink">B</b>oxes <b className="bg-stripe-pink">P</b>erform <b className="bg-stripe-pink">Q</b>uick <b className="bg-stripe-pink">W</b>altzes <b className="bg-stripe-pink">A</b>nd <b className="bg-stripe-pink">J</b>igs.</DemoP>
+        <DemoP><b className="bg:stripe-pink">H</b>eavy <b className="bg:stripe-pink">B</b>oxes <b className="bg:stripe-pink">P</b>erform <b className="bg:stripe-pink">Q</b>uick <b className="bg:stripe-pink">W</b>altzes <b className="bg:stripe-pink">A</b>nd <b className="bg:stripe-pink">J</b>igs.</DemoP>
     </DemoPanel>
 </Demo>
 ```html
@@ -44,7 +44,7 @@ Convert the first letter of each word to uppercase.
 Convert all characters to lowercase.
 <Demo $py={0}>
     <DemoPanel>
-        <DemoP><b className="bg-stripe-pink">heavy boxes perform quick waltzes and jigs.</b></DemoP>
+        <DemoP><b className="bg:stripe-pink">heavy boxes perform quick waltzes and jigs.</b></DemoP>
     </DemoPanel>
 </Demo>
 ```html
@@ -55,7 +55,7 @@ Convert all characters to lowercase.
 Convert all characters to uppercase.
 <Demo $py={0}>
     <DemoPanel>
-        <DemoP><b className="bg-stripe-pink">HEAVY BOXES PERFORM QUICK WALTZES AND JIGS.</b></DemoP>
+        <DemoP><b className="bg:stripe-pink">HEAVY BOXES PERFORM QUICK WALTZES AND JIGS.</b></DemoP>
     </DemoPanel>
 </Demo>
 ```html
@@ -66,7 +66,7 @@ Convert all characters to uppercase.
 Capitalize the first letter of a sentence.
 <Demo $py={0}>
     <DemoPanel>
-        <DemoP><b className="bg-stripe-pink">H</b>eavy boxes perform quick waltzes and jigs.</DemoP>
+        <DemoP><b className="bg:stripe-pink">H</b>eavy boxes perform quick waltzes and jigs.</DemoP>
     </DemoPanel>
 </Demo>
 ```html
