--- a/website/app/[locale]/(root)/docs/display/content.mdx
+++ b/website/app/[locale]/(root)/docs/display/content.mdx
@@ -247,7 +247,7 @@ Use `contents` to make the element&rsquo;s children like direct children of the 
 Use `flow-root` to create a block-level element that establishes a new block formatting context.
 {<Demo $py={0}>
     <div className="bg:float p:8x w:full">
-        <div className="w:full flow-root bg-stripe-pink">
+        <div className="w:full flow-root bg:stripe-pink">
             <Image src="/images/blur.png" className="r:8 object:cover my:0 mr:30 float:left" width={160} height={90} alt="Float Image" />
             <p className="my:0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
