Update component links in introduction

--- a/website/app/[locale]/(root)/docs/introduction/components/Comparisons.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/components/Comparisons.mdx
@@ -129,7 +129,7 @@ export const bootstrap = brands.find(({ name }) => name === 'Bootstrap')
             <td colSpan={4}><small>The ability to customize tokens</small></td>
         </tr>
         <tr>
-            <th>Variables with Modes</th>
+            <th>[Variables with Modes](/docs/variables-with-modes)</th>
             <td><InlineGood /></td>
             <td><InlineBad /></td>
             <td><InlineBad /></td>
@@ -147,13 +147,13 @@ export const bootstrap = brands.find(({ name }) => name === 'Bootstrap')
             <td><InlineBad />Predefined</td>
         </tr>
         <tr>
-            <th>Breakpoints and Screens</th>
+            <th>[Breakpoints](/docs/responsive-design) and [Screens](/docs/screens)</th>
             <td>11</td>
             <td>5</td>
             <td>5</td>
         </tr>
         <tr>
-            <th>Colors</th>
+            <th>[Colors](/docs/colors)</th>
             <td>~222</td>
             <td>~244</td>
             <td>~100</td>
