Add: `invert` and `text-invert` variables

--- a/website/app/[locale]/(root)/docs/base-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/base-colors/content.mdx
@@ -3,6 +3,7 @@
 |---------------------------------------------------|---------------------------------------------------------------------------|
 | <small>Semantic</small>                                                                                                       |
 | <Bg className="bg:base" />`base`                  | background for page, modal                                                |
+| <Bg className="bg:invert" />`invert`              | inverted color of the background                                          |
 | <small>Primitive</small>                                                                                                      |
 | <Bg className="bg:gray" />`gray`                  | neutral, subtle, muted                                                    |
 | <Bg className="bg:slate" />`slate`                | cool, calm, sophisticated                                                 |
