--- a/website/app/[locale]/(root)/docs/text-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/text-colors/content.mdx
@@ -7,6 +7,7 @@
 | <Aa className="fg:light" />`text-light`           | light color, icons                                                        |
 | <Aa className="fg:lighter" />`text-lighter`       | lighter color, icons                                                      |
 | <Aa className="fg:lightest" />`text-lightest`     | dim color, placeholder, disabled text                                     |
+| <Aa className="fg:invert" />`text-invert`         | inverted color of the foreground                                          |
 | <small>Primitive</small>                                                                                                      |
 | <Aa className="fg:gray" />`text-gray`             | neutral, subtle, muted                                                    |
 | <Aa className="fg:slate" />`text-slate`           | cool, calm, sophisticated                                                 |
